Add support for custom collections and ols config import